<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="?colorPrimary">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="?textColorPrimary"
                android:textSize="18sp"
                tools:text="Title" />

        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/pagerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_footer"
        android:layout_below="@id/toolbar">

        <org.akvo.caddisfly.widget.CustomViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_footer"
        android:layout_below="@id/toolbar"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="?colorPrimary">

        <TextView
            android:id="@+id/image_pageLeft"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:drawableStart="@drawable/button_arrow_left_selector"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="?textColorPrimary"
            android:textStyle="bold" />

        <org.akvo.caddisfly.widget.PageIndicatorView
            android:id="@+id/pager_indicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/image_pageRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/next"
            android:drawableEnd="@drawable/button_arrow_right_selector"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="?textColorPrimary"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>